# Check if CGAL is available
IF (NOT CGAL_FOUND)
    IF (DEFINED ENV{CGAL_PATH} AND NOT DEFINED ENV{CGAL_DIR})
        SET(CGAL_DIR $ENV{CGAL_PATH})
    ENDIF (DEFINED ENV{CGAL_PATH} AND NOT DEFINED ENV{CGAL_DIR})
    SET(CGAL_DONT_OVERRIDE_CMAKE_FLAGS TRUE CACHE BOOL
        "Disable CGAL from overwriting my cmake flags")
    FIND_PACKAGE(CGAL QUIET)
    INCLUDE(${CGAL_USE_FILE})
ENDIF (NOT CGAL_FOUND)

IF (CGAL_FOUND)
    FILE(GLOB TEST_SRC_FILES *.cpp main.cpp)
    FILE(GLOB TEST_INC_FILES *.h *.inl)

    ADD_EXECUTABLE(igl_boolean_tests ${TEST_SRC_FILES} ${TEST_INC_FILES})
    TARGET_LINK_LIBRARIES(igl_boolean_tests ${GTEST_BOTH_LIBRARIES} ${CGAL_LIBRARIES})
    ADD_CUSTOM_COMMAND(TARGET igl_boolean_tests POST_BUILD COMMAND igl_boolean_tests)
ENDIF (CGAL_FOUND)
